flag notebook as under construction

--- a/notebooks/lowrank/rangefinder_rf1.ipynb
+++ b/notebooks/lowrank/rangefinder_rf1.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "**This notebook is under construction**\n",
+    "\n",
     "# 0. The rangefinder problem\n",
     "\n",
     "Let $A$ be an $m$-by-$n$ data matrix.\n",
@@ -94,31 +96,31 @@
    "cell_type": "markdown",
    "source": [
     "This notebook runs three groups of experiments to show basic tradeoffs when\n",
-    "setting the last three arguments of ``power_rangefinder``. These tradeoffs include:\n",
+    "setting the last three arguments of ``power_rangefinder``. \n",
     "\n",
-    "  1. Increasing ``num_passes`` produces higher quality solutions at the expense\n",
-    "     of longer runtime.\n",
-    "     Conceptually, it's useful to note that when ``k=1``, ``num_passes`` is even,\n",
-    "     and ``passes_per_stab=2``, the rangefinder is equivalent to running the power\n",
-    "     method to find the top eigenvector of $AA^T$.\n",
-    "     Rangefinders are typically only called with very small number of passes.\n",
+    "*Experiment 1*. Illustrate how increasing ``num_passes`` produces higher quality solutions at the expense\n",
+    "of longer runtime.\n",
+    "Conceptually, it's useful to note that when ``k=1``, ``num_passes`` is even,\n",
+    "and ``passes_per_stab=2``, the rangefinder is equivalent to running the power\n",
+    "method to find the top eigenvector of $AA^T$.\n",
+    "Rangefinders are typically only called with very small number of passes.\n",
     "\n",
-    "  2. Stabilizers have no effect on the final result when running in exact arithmetic.\n",
-    "     An ideal implementation would only perform enough work as is necessary to prevent\n",
-    "     accumulation of rounding errors as power iterations proceed.\n",
-    "     The simplest stabilizer computes an orthonormal basis for the\n",
-    "     range of the given matrix by QR factorizing $M_1 = QR$ and then returning\n",
-    "     $M_2 = Q$. One can alternatively compute a pivoted LU factorization\n",
-    "     $M_1 = PLU$ and then return $M_2 = PL$.\n",
-    "     Efficient implementations of these methods would not perform the\n",
-    "     factorizations *per-say*. Instead, they would suitably modify $M_1$ in-place.\n",
-    "     We show the performance tradeoffs when using stabilizing by explicit\n",
-    "     QR and LU factorizations obtained from SciPy (which calls LAPACK).\n",
+    "*Experiment 2*. Illustrate the practical effects of choosing different stabilizers.\n",
+    "Stabilizers have no effect on the final result when running in exact arithmetic.\n",
+    "Ideal implementations only perform enough work as is necessary to prevent\n",
+    "accumulation of rounding errors as power iterations proceed.\n",
+    "The simplest stabilizer computes an orthonormal basis for the\n",
+    "range of the given matrix by QR factorizing $M_1 = QR$ and then returning\n",
+    "$M_2 = Q$. One can alternatively compute a pivoted LU factorization\n",
+    "$M_1 = PLU$ and then return $M_2 = PL$.\n",
+    "Efficient implementations of these methods would not perform the\n",
+    "factorizations *per-say*. Instead, they would suitably modify $M_1$ in-place.\n",
+    "We show the performance tradeoffs when using stabilizing by explicit\n",
+    "QR and LU factorizations obtained from SciPy (which calls LAPACK).\n",
     "\n",
-    "  3. Increasing ``passes_per_stab`` may result in computational savings when\n",
-    "     ``num_passes`` is moderate. However, this risks introducing potentially\n",
-    "     significant rounding errors as the power iterations proceed.\n",
-    "\n",
+    "*Experiment 3*. Increasing ``passes_per_stab`` may result in computational savings when\n",
+    "``num_passes`` is moderate. However, this risks introducing potentially\n",
+    "significant rounding errors as the power iterations proceed.\n",
     "\n",
     "The code block below generates problem data for these experiments."
    ],
