--- a/notebooks/least_squares/sap1_vs_lapack.ipynb
+++ b/notebooks/least_squares/sap1_vs_lapack.ipynb
@@ -34,7 +34,7 @@
     "            la.lstsq(A, b)\n",
     "            lapack_times[i] = time.time() - tic\n",
     "        tic = time.time()\n",
-    "        alg.exec(A, b, tol, iter_lim, rng)\n",
+    "        alg(A, b, tol, iter_lim, rng)\n",
     "        rlapy_times[i] = time.time() - tic\n",
     "    return lapack_times, rlapy_times"
    ]
