rename classes. Update notebooks. Increment rlapy version. Add an untested sketch-and-precondition method for general saddle point systems.

--- a/notebooks/least_squares/procedural_least_squares_driver.ipynb
+++ b/notebooks/least_squares/procedural_least_squares_driver.ipynb
@@ -45,17 +45,17 @@
     "            # Sketch and solve\n",
     "            iter_lim = 1\n",
     "            tol = np.NaN\n",
-    "            alg = rla.SAS1(rla.sjlt_operator, sampling_factor, driver)\n",
+    "            alg = rla.SSO1(rla.sjlt_operator, sampling_factor, driver)\n",
     "        elif mode == 'qr':\n",
     "            # Sketch and precondition (LSQR iterative solver)\n",
     "            # Initializes LSQR at the output of \"sketch and solve\"\n",
     "            # Current implementation needs A to be full rank\n",
-    "            alg = rla.SAP1(rla.sjlt_operator, sampling_factor)\n",
+    "            alg = rla.SPO3(rla.sjlt_operator, sampling_factor)\n",
     "        else:\n",
     "            # Sketch and precondition (LSQR iterative solver)\n",
     "            # Initializes LSQR at the zero vector\n",
     "            # Uses SVD; A can be rank deficient\n",
-    "            alg = rla.SAP2(rla.sjlt_operator, sampling_factor, False)\n",
+    "            alg = rla.SPO1(rla.sjlt_operator, sampling_factor, False)\n",
     "        x = alg(A, b, tol, iter_lim, rng)\n",
     "        return x\n"
    ]
