--- a/notebooks/least_squares/procedural_least_squares_driver.ipynb
+++ b/notebooks/least_squares/procedural_least_squares_driver.ipynb
@@ -56,7 +56,7 @@
     "            # Initializes LSQR at the zero vector\n",
     "            # Uses SVD; A can be rank deficient\n",
     "            alg = rla.SPO1(rla.sjlt_operator, sampling_factor, False)\n",
-    "        x = alg(A, b, tol, iter_lim, rng)\n",
+    "        x = alg(A, b, 0.0, tol, iter_lim, rng)\n",
     "        return x\n"
    ]
   },
