change package name to PARLA

--- a/notebooks/eigen_decomposition/eigen_decomposition_of_Hermitian_matrix.ipynb
+++ b/notebooks/eigen_decomposition/eigen_decomposition_of_Hermitian_matrix.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "# insert at 1, 0 is the script path (or '' in REPL)\n",
-    "import rlapy as rla\n",
-    "import rlapy.utils.linalg_wrappers as law"
+    "import parla as rla\n",
+    "import parla.utils.linalg_wrappers as law"
    ]
   },
   {
@@ -523,7 +523,7 @@
     }
    ],
    "source": [
-    "from rlapy.comps.evd import *\n",
+    "from parla.comps.evd import *\n",
     "A0 = np.random.uniform(size=(40,80))\n",
     "A0 = A0.T @ A0\n",
     "print(A0.shape)\n",
@@ -543,7 +543,7 @@
     "plt.title('evd2')\n",
     "plt.show()\n",
     "\n",
-    "#Now, let us check the results from rlapy against an exact SVD factorization\n",
+    "#Now, let us check the results from parla against an exact SVD factorization\n",
     "from scipy.linalg import svd, eigh\n",
     "U0,L0,Vh0 = svd(A0)\n",
     "W0, V = eigh(A0)\n",
