--- a/notebooks/least_squares/procedural_least_squares_driver.ipynb
+++ b/notebooks/least_squares/procedural_least_squares_driver.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import rlapy as rla\n",
+    "import parla as rla\n",
     "import numpy as np\n",
     "import scipy.linalg as la\n",
     "from notebooks.least_squares.helpers import make_demo_helper\n",
