--- a/notebooks/least_squares/sap1_vs_lapack.ipynb
+++ b/notebooks/least_squares/sap1_vs_lapack.ipynb
@@ -11,7 +11,7 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import rlapy as rla\n",
+    "import parla as rla\n",
     "import numpy as np\n",
     "import scipy.linalg as la\n",
     "from notebooks.least_squares.helpers import make_demo_helper\n",
@@ -86,7 +86,7 @@
     "                              sap, 1e-12, seeds, run_lapack)\n",
     "print('Runtimes: A has linearly decaying spectrum')\n",
     "print('\\tLAPACK: ' + str(llapackt))\n",
-    "print('\\trlapy : ' + str(lrandlat))\n",
+    "print('\\tparla : ' + str(lrandlat))\n",
     "print()\n",
     "\n",
     "# exponentially decaying spectrum\n",
@@ -95,7 +95,7 @@
     "                              sap, 1e-12, seeds, run_lapack)\n",
     "print('Runtimes: A has exponentially decaying spectrum')\n",
     "print('\\tLAPACK: ' + str(elapackt))\n",
-    "print('\\trlapy : ' + str(erandlat))"
+    "print('\\tparla : ' + str(erandlat))"
    ]
   },
   {
@@ -139,13 +139,13 @@
     "                              sap, 1e-12, seeds, run_lapack)\n",
     "print('Runtimes: A has linearly decaying spectrum')\n",
     "print('\\tLAPACK: ' + str(llapackt_old))\n",
-    "print('\\trlapy : ' + str(lrandlat))\n",
+    "print('\\tparla : ' + str(lrandlat))\n",
     "\n",
     "print('\\nRuntimes: A has exponentially decaying spectrum')\n",
     "elapackt, erandlat = time_alg(dims, exp_spec, prop_range,\n",
     "                              sap, 1e-12, seeds, run_lapack)\n",
     "print('\\tLAPACK: ' + str(elapackt_old))\n",
-    "print('\\trlapy : ' + str(erandlat))"
+    "print('\\tparla : ' + str(erandlat))"
    ]
   }
  ],
