--- a/notebooks/lowrank/rangefinder_rf1.ipynb
+++ b/notebooks/lowrank/rangefinder_rf1.ipynb
@@ -38,7 +38,7 @@
     "bears many similarities to a power method for finding the top eigenvector of $AA^T$.\n",
     "The particular implementation is given by the class\n",
     "```\n",
-    "rlapy.comps.rangefinders:RF1(RangeFinder)\n",
+    "parla.comps.rangefinders:RF1(RangeFinder)\n",
     "```\n",
     "The code block below provides a wrapper around the ``RF1`` class.\n",
     "The wrapper exposes the algorithm's functionality through a familiar procedural API."
@@ -57,8 +57,8 @@
     "import itertools\n",
     "\n",
     "import numpy as np\n",
-    "import rlapy as rla\n",
-    "import rlapy.utils.linalg_wrappers as law\n",
+    "import parla as rla\n",
+    "import parla.utils.linalg_wrappers as law\n",
     "\n",
     "\n",
     "def power_rangefinder(A, k, rng, num_passes=2, stabilizer=law.orth, passes_per_stab=1):\n",
