standardize procedural names

--- a/notebooks/lowrank/rangefinder_rf1.ipynb
+++ b/notebooks/lowrank/rangefinder_rf1.ipynb
@@ -61,7 +61,7 @@
     "import parla.utils.linalg_wrappers as law\n",
     "\n",
     "\n",
-    "def power_rangefinder(A, k, rng, num_passes=2, stabilizer=law.orth, passes_per_stab=1):\n",
+    "def rf1(A, k, rng, num_passes=2, stabilizer=law.orth, passes_per_stab=1):\n",
     "    \"\"\"\n",
     "    Return a matrix Q with k orthonormal columns, where ||(I - QQ')A|| is small.\n",
     "\n",
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "This notebook runs three groups of experiments to show basic tradeoffs when\n",
-    "setting the last three arguments of ``power_rangefinder``.\n",
+    "setting the last three arguments of ``rf1``.\n",
     "\n",
     "*Experiment 1*. Illustrate how increasing ``num_passes`` produces higher quality solutions at the expense\n",
     "of longer runtime.\n",
@@ -222,7 +222,7 @@
     "            for k in ks:\n",
     "                rng = np.random.default_rng(seed)\n",
     "                tic = time.time()\n",
-    "                Q = power_rangefinder(A, k, rng, num_passes=num_pass)\n",
+    "                Q = rf1(A, k, rng, num_passes=num_pass)\n",
     "                toc = time.time()\n",
     "                err = la.norm(A - Q @ (Q.T @ A), ord=2)\n",
     "                err /= spectrum[k+1]\n",
@@ -329,7 +329,7 @@
     "                    rng = np.random.default_rng(seed)\n",
     "                    tic = time.time()\n",
     "                    stab_type, stabilizer = stab\n",
-    "                    Q = power_rangefinder(A, k, rng,\n",
+    "                    Q = rf1(A, k, rng,\n",
     "                                          num_passes=num_pass,\n",
     "                                          stabilizer=stabilizer)\n",
     "                    toc = time.time()\n",
